objects/OpportunityStages__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>This Custom Setting holds the relation of opportunity stages to record types</description>
    <fields>
        <fullName>Chevron_Base_Color__c</fullName>
        <defaultValue>&quot;255,193,0,0&quot;</defaultValue>
        <description>Please enter the chevron base color, which is applicable for the stage. Please enter in the format: 
rgba(255,255,255,0.6)</description>
        <inlineHelpText>Please enter the chevron base color, which is applicable for the stage. Please enter in the format: 
rgba(255,255,255,0.6)</inlineHelpText>
        <label>Chevron Base Color</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RecordType_Names__c</fullName>
        <description>This field specifies one or a list of record types, where the stage is available. Please use the developer name and separate the names by komma</description>
        <inlineHelpText>This field specifies one or a list of record types, where the stage is available. Please use the developer name and separate the names by komma</inlineHelpText>
        <label>RecordType Names</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sorter__c</fullName>
        <description>This sorts the stages in the correct order</description>
        <label>Sorter</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>isClosed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Determines, whether this stage is a closed status</description>
        <inlineHelpText>Determines, whether this stage is a closed status</inlineHelpText>
        <label>isClosed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isWon__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isWon</label>
        <type>Checkbox</type>
    </fields>
    <label>OpportunityStages</label>
    <listViews>
        <fullName>All_Fields</fullName>
        <columns>NAME</columns>
        <columns>Chevron_Base_Color__c</columns>
        <columns>isClosed__c</columns>
        <columns>isWon__c</columns>
        <columns>RecordType_Names__c</columns>
        <columns>Sorter__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Fields</label>
        <language>en_US</language>
    </listViews>
</CustomObject>